// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CityPlaces and connects correctly 1`] = `
<div
  className="page page--gray page--main"
>
  <main
    className="page__main page__main--index"
  >
    <h1
      className="visually-hidden"
    >
      Cities
    </h1>
    <div
      className="tabs"
    />
    <div
      className="cities"
    />
  </main>
</div>
`;

exports[`renders EmptyCityPlaces and connects correctly 1`] = `
<div
  className="page page--gray page--main"
>
  <main
    className="page__main page__main--index page__main--index-empty"
  >
    <h1
      className="visually-hidden"
    >
      Cities
    </h1>
    <div
      className="tabs"
    />
    <div
      className="cities"
    />
  </main>
</div>
`;
